[package]
name = "reqwest_perf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
futures = "0.3.30"
reqwest = "0.11.23"
statistical = "1.0.0"
tokio = { version = "1.35.1", features = ["full"] }
ureq = "2.9.1"
